--- a/main.html
+++ b/main.html
@@ -10,6 +10,31 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+	<form>
+		<div>
+		<label for = "name">Name</label>
+		<input type = "text" id = "name" placeholder = "Name">
+		</div>
+		<div>
+		<label for = "phone">Phone Number</label>
+		<input type = "number" id = "phone" placeholder = "Phone Number">
+		</div>
+		<div>
+		<label for = "address">Address</label>
+		<input type = "text" id = "address" placeholder = "Address">
+		</div>
+		
+		<input type = "checkbox" id = "checkbox" value = " Have you ever lived with a Dog before? ">
+		<label for = "breed">Please select your preferred breeds </label>
+		<select id = "multiselect">
+			<option>Labra</option>
+			<option>Shephard</option>
+			<option>Bulldog</option>
+		</select>
+		<input type = "submit" id = "submit" value = "Submit">
+		
+		
+	</form>
 
 </body>
 
