--- a/main.html
+++ b/main.html
@@ -13,17 +13,17 @@
 	<form>
 		
 		<label for = "name">Name</label>
-		<input type = "text" id = "name" placeholder = "Name">
-		
-		
+		<input type = "text" name = "name" id = "name" placeholder = "Name" required>
+
 		<label for = "phone">Phone Number</label>
-		<input type = "number" id = "phone" placeholder = "Phone Number">
+		<input type = "text" id = "phone" placeholder = "Phone Number" required>
 
 		<label for = "address">Address</label>
-		<input type = "text" id = "address" placeholder = "Address">
+		<input type = "text" id = "address" placeholder = "Address" required>
+
 		
+		<input type = "checkbox" id = "checkbox" value = "Have you ever lived with a Dog before?">
 		
-		<input type = "checkbox" id = "checkbox" value = " Have you ever lived with a Dog before? ">
 		<label for = "breed">Please select your preferred breeds </label>
 		<select id = "multiselect">
 			<option>Labra</option>
