--- a/main.html
+++ b/main.html
@@ -24,13 +24,13 @@
 		
 		<input type = "checkbox" id = "checkbox" value = "Have you ever lived with a Dog before?">
 		
-		<label for = "breed">Please select your preferred breeds </label>
-		<select id = "multiselect">
-			<option>Labra</option>
-			<option>Shephard</option>
-			<option>Bulldog</option>
+		<label for = "breeds">Please select your preferred breeds</label>
+		<select id = "multiSelect">
+			<option>German Shepherd</option>
+			<option>Alaskan Malamute</option>
+			<option>Siberian Husky</option>
 		</select>
-		<input type = "submit" id = "submit" value = "Submit">
+		<input type ="submit" id = "submit" value = "Submit">
 		
 		
 	</form>
